# exp-lang-agent

./: .coverage  .env.example  .pre-commit-config.yaml  .yamllint.yml  CONTINUITY.md  Makefile  README.md  coverage.xml  markdownlint.yml  pyproject.toml  test.db
.braains/: AI-MEMORY.md  AI-NOTES-2-SELF.md  PATTERN-REGISTRY.md  REQUIREMENTS-MEMORY.md  REQUIREMENTS-REGISTRY.md
.braains/adrs/: ADR-001-knowledge-database-architecture.md  ADR-002-anthropic-api-integration.md  ADR-003-fastapi-framework-selection.md  ADR-004-postgresql-state-management.md  ADR-005-authentication-strategy.md  ADR-006-docker-deployment-strategy.md  ADR-007-tdd-methodology.md  ADR-008-database-strategy-resolution.md  ADR-009-docker-implementation-strategy.md  ADR-010-api-route-architecture.md  ADR-INDEX.md  ADR-TEMPLATE.md
.braains/rules/: rules-101.md  rules-102.md  rules-103.md  rules-104.md  rules-106.md
.linting/configs/: mypy.ini  ruff.toml
requirements/: AI-LINGUISTICS-AGENT-REQUIREMENTS.md  COMPLETE-REQUIREMENTS-MAPPING.md
src/linguistics_agent/: __init__.py  agent.py  config.py  database.py
src/linguistics_agent/api/: __init__.py  auth.py  dependencies.py  dependencies_minimal.py  dependencies_test.py  main.py
src/linguistics_agent/api/middleware/: __init__.py  logging.py  rate_limiting.py  security.py
src/linguistics_agent/api/routes/: __init__.py  admin.py  analysis.py  auth.py  auth_minimal.py  cors_options.py  health.py  knowledge.py  linguistics.py  messages.py  projects.py  sessions.py  sessions_backup.py  users.py
src/linguistics_agent/models/: __init__.py  database.py  requests.py  responses.py
src/linguistics_agent/tools/: __init__.py  ebnf_processor.py  grammar_analyzer.py
tests/: __init__.py
tests/unit/: test_database_models.py  test_fastapi_interface.py  test_linguistics_agent.py
